maze.lessons.maze.wallfollower.WallFollowerMaze.scala.error
Escaper:4: error: illegal start of simple expression
		if (:estFaceMur()) {
                    ^Escaper:38: error: ')' expected but '}' found.
	} while (!estSurBiscuit())
        ^